# ros_workshop

./: CMakeLists.txt  README.md  Turtlebot.md  ik_service.py  package.xml
cfg/: MyConfig.cfg  WorkshopConfig.cfg
scripts/: ik_service.py  simple_action_cmd.py  simple_vel_cmd.py
srv/: MyIkService.srv
